fix footer, make sign in and login pages full screen on mobile, make slide in menu full screen on mobile

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,15 +1,12 @@
 #footer {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(1, 1fr);
   background-color: aliceblue;
   place-items: center;
-  align-content: space-evenly;
   font-family: 'Oxygen', sans-serif;
 }
 
 .footer-center {
-  grid-column: 2;
+  // placeholder
 }
 
 // Huge screen
