--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -263,7 +263,8 @@
     }
 
     #nav-slide-in-menu {
-        width: 80% !important;
+        width: 100vw !important;
+        height: 100vh !important;
     }
 
     #welcome-nav {
